[gd_scene load_steps=7 format=3 uid="uid://qw3swkb63er8"]

[ext_resource type="FontFile" uid="uid://ccfjfp4hfprry" path="res://Assets/Font/karmatic-arcade/ka1.ttf" id="1_8sf25"]
[ext_resource type="Script" uid="uid://drltc8wlq2cya" path="res://Scenes/CharacterSelect/playerSelect.gd" id="1_sk4ta"]
[ext_resource type="PackedScene" uid="uid://cmkigadclkeav" path="res://Scenes/CharacterSelect/select_player_button.tscn" id="1_tf80a"]
[ext_resource type="Texture2D" uid="uid://vcdb8ghvv1jx" path="res://Assets/Background/menu_bg.jpg" id="2_tf80a"]
[ext_resource type="Texture2D" uid="uid://bn8pdhcdu2sh4" path="res://Sprites/Player/sofiCat/light_attack/SofiCat_s1.png" id="5_gchby"]
[ext_resource type="Texture2D" uid="uid://lnpopvvmi0bp" path="res://Sprites/Player/nerdCat/nerdCat.png" id="6_qwmle"]

[node name="PlayerCharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sk4ta")

[node name="NerdCatButton" type="VBoxContainer" parent="."]
top_level = true
custom_minimum_size = Vector2(500, 600)
layout_mode = 0
offset_left = 136.0
offset_top = 184.0
offset_right = 736.0
offset_bottom = 878.0
alignment = 1

[node name="PlayerButton1" parent="NerdCatButton" instance=ExtResource("1_tf80a")]
layout_mode = 2

[node name="PlayerLabel" parent="NerdCatButton/PlayerButton1/MarginContainer/HBoxContainer" index="0"]
text = "Nerd Cat"

[node name="SofiCatButton" type="VBoxContainer" parent="."]
top_level = true
custom_minimum_size = Vector2(500, 600)
layout_mode = 0
offset_left = 1224.0
offset_top = 187.0
offset_right = 1824.0
offset_bottom = 881.0
alignment = 1

[node name="PlayerButton2" parent="SofiCatButton" instance=ExtResource("1_tf80a")]
layout_mode = 2

[node name="P1Highlight" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 77.0
offset_top = 185.0
offset_right = 691.0
offset_bottom = 895.0
scale = Vector2(1, 1.0399997)
color = Color(1, 0, 0.17254902, 0.5411765)

[node name="P2Highlight" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 1265.0001
offset_top = 185.00002
offset_right = 1873.6877
offset_bottom = 917.5972
scale = Vector2(1.0087274, 1.0178227)
color = Color(0, 0.2901961, 1, 0.5411765)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -983.9999
offset_top = -660.55896
offset_right = 989.9999
offset_bottom = 680.9137
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.9210467)
texture = ExtResource("2_tf80a")
expand_mode = 1

[node name="OrText" type="Label" parent="."]
layout_mode = 0
offset_left = 735.0
offset_top = 379.0
offset_right = 1157.0
offset_bottom = 728.0
theme_override_fonts/font = ExtResource("1_8sf25")
theme_override_font_sizes/font_size = 140
text = "OR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChooseaCat" type="Label" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = -112.0
offset_right = 1595.0
offset_bottom = 237.0
theme_override_fonts/font = ExtResource("1_8sf25")
theme_override_font_sizes/font_size = 80
text = "Choose a Cat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P1ReadyLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 775.0
offset_top = 333.0
offset_right = 2679.0
offset_bottom = 459.0
theme_override_fonts/font = ExtResource("1_8sf25")
theme_override_font_sizes/font_size = 56
text = "P1 Ready"

[node name="P2ReadyLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 778.0
offset_top = 721.0
offset_right = 2682.0
offset_bottom = 847.0
theme_override_fonts/font = ExtResource("1_8sf25")
theme_override_font_sizes/font_size = 56
text = "P2 Ready"

[node name="SofiCat" type="Sprite2D" parent="."]
position = Vector2(1538.0001, 508)
scale = Vector2(0.585, 0.5763636)
texture = ExtResource("5_gchby")

[node name="NerdCat" type="Sprite2D" parent="."]
position = Vector2(436.00003, 508.00003)
scale = Vector2(2.3162057, 2.2748816)
texture = ExtResource("6_qwmle")

[editable path="NerdCatButton/PlayerButton1"]
[editable path="SofiCatButton/PlayerButton2"]
